--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "keywords": [],
   "author": [
-		{
+    {
       "name": "Broomu Digitals",
       "email": "info@broomudigitals.fi",
       "homepage": "https://www.broomudigitals.fi"
@@ -28,10 +28,13 @@
     "hds-core": ">=1.0.0",
     "merge-stream": ">=2.0.0",
     "path": ">=0.12.7",
-		"sass": ">=1.35.2"
+    "sass": ">=1.35.2"
   },
   "browserslist": [
     "last 2 versions",
     "not ie <= 11"
-  ]
+  ],
+  "dependencies": {
+    "@babel/preset-react": "^7.22.5"
+  }
 }
